<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ModbusUnion" Id="{6592913a-9111-4462-a3ae-45df24f56cc7}">
    <Declaration><![CDATA[TYPE ModbusUnion :
UNION
	realValue : REAL;
	longValue : DWORD;
	wordValue : ARRAY[1..2] OF WORD;
	timeValue : TIME;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>